src/test/deca/syntax/valid/var_in_method.deca
//Description
//    Vérifier la dcl de var dans une method
//
//Résultats :
//   Ok
//

class A{

  int getX(){
  int x = 3;
  return x;
  }
}
