src/test/deca/syntax/invalid/wrong_decl14.deca
//Description
//    Vérifier la decl de var dans method
//
//Résultats :
//    Erreur Syntaxique ligne 8
//


class A{

  void setX(){
    int if = 3;
  }

}
